--- a/app/src/main/res/layout/travel_results2.xml
+++ b/app/src/main/res/layout/travel_results2.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="5dp"
         android:text="Last Name:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="5dp"
         android:text="Traveling with others:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="5dp"
         android:text="Dates of Travel:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
@@ -44,12 +44,17 @@
 
     <TextView
         android:id="@+id/date2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="12dp"
-        android:text="02/28/2024"
-        android:textColor="@color/dark_blue"
+        android:layout_width="165dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/form_box"
+        android:backgroundTint="@color/grey"
+        android:paddingStart="17sp"
+        android:paddingTop="15sp"
+        android:text="End date"
+        android:textColor="@color/dark_grey"
+        android:textSize="17sp"
         app:layout_constraintStart_toEndOf="@+id/date1"
         app:layout_constraintTop_toBottomOf="@+id/dates" />
 
@@ -57,8 +62,8 @@
         android:id="@+id/to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
         android:text="to"
         android:textColor="@color/dark_gray"
@@ -69,34 +74,49 @@
 
     <TextView
         android:id="@+id/date1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="165dp"
+        android:layout_height="53dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:text="02/21/2024"
-        android:textColor="@color/dark_blue"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/form_box"
+        android:backgroundTint="@color/grey"
+        android:paddingStart="17sp"
+        android:paddingTop="15sp"
+        android:text="Start date"
+        android:textColor="@color/dark_grey"
+        android:textSize="17sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dates" />
 
     <TextView
         android:id="@+id/firstResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="53dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="9dp"
-        android:text="Sharanya"
-        android:textColor="@color/dark_blue"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/form_box"
+        android:backgroundTint="@color/grey"
+        android:paddingStart="17sp"
+        android:paddingTop="15sp"
+        android:text="First name"
+        android:textColor="@color/dark_grey"
+        android:textSize="17sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/first" />
 
     <TextView
         android:id="@+id/lastResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="53dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="9dp"
-        android:text="Pathakota"
-        android:textColor="@color/dark_blue"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/form_box"
+        android:backgroundTint="@color/grey"
+        android:paddingStart="17sp"
+        android:paddingTop="15sp"
+        android:text="Last name"
+        android:textColor="@color/dark_grey"
+        android:textSize="17sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/last" />
 
@@ -105,7 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="4dp"
         android:text="First Name:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
@@ -117,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="5dp"
         android:text="Itinerary:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
@@ -126,34 +146,49 @@
 
     <TextView
         android:id="@+id/itinResults"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="53dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="Itinerary..."
-        android:textColor="@color/dark_blue"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/form_box"
+        android:backgroundTint="@color/grey"
+        android:paddingStart="17sp"
+        android:paddingTop="15sp"
+        android:text="Itinerary"
+        android:textColor="@color/dark_grey"
+        android:textSize="17sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itin" />
 
     <TextView
         android:id="@+id/othersResults"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="53dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="9dp"
-        android:text="Yes"
-        android:textColor="@color/dark_blue"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/form_box"
+        android:backgroundTint="@color/grey"
+        android:paddingStart="17sp"
+        android:paddingTop="15sp"
+        android:text="First name"
+        android:textColor="@color/dark_grey"
+        android:textSize="17sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/others" />
 
     <TextView
         android:id="@+id/groupResults"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="53dp"
+        android:background="@drawable/form_box"
+        android:text="Group"
+        android:paddingTop="15sp"
+        android:paddingStart="17sp"
+        android:textSize="17sp"
+        android:backgroundTint="@color/grey"
+        android:textColor="@color/dark_grey"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="CS"
-        android:textColor="@color/dark_blue"
+        android:layout_marginTop="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/group" />
 
@@ -162,8 +197,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:text="Travel Group:"
+        android:layout_marginTop="5dp"
+        android:text="Program of Study:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -177,6 +212,7 @@
         android:backgroundTint="@color/dark_blue"
         android:fontFamily="@font/inter"
         android:text="View Student"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search" />
@@ -185,8 +221,8 @@
         android:id="@+id/mealTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="34dp"
         android:fontFamily="@font/inter"
         android:text="Travel Results"
         android:textColor="@color/dark_blue"
@@ -200,7 +236,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="268dp"
+        android:layout_marginTop="220dp"
         android:fontFamily="@font/inter"
         android:text="Student Information"
         android:textColor="@color/dark_blue"
@@ -224,7 +260,7 @@
         android:id="@+id/search"
         android:layout_width="356dp"
         android:layout_height="53dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="96dp"
         android:background="@drawable/form_box"
         android:backgroundTint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
