--- a/app/src/main/res/drawable/baseline_home_filled_24.xml
+++ b/app/src/main/res/drawable/baseline_home_filled_24.xml
@@ -2,6 +2,6 @@
     android:height="24dp" android:tint="#274C77" android:viewportHeight="24"
     android:viewportWidth="24" android:width="24dp">
       
-    <path android:fillColor="@android:color/white" android:pathData="M12,3L4,9v12h5v-7h6v7h5V9z"/>
+    <path android:fillColor="#274C77" android:pathData="M12,3L4,9v12h5v-7h6v7h5V9z"/>
     
 </vector>
