--- a/app/src/main/res/layout/event_hub.xml
+++ b/app/src/main/res/layout/event_hub.xml
@@ -67,6 +67,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <include
+        android:id="@+id/navigationBar"
+        layout="@layout/navigation_bar" />
+
     <!--    <androidx.core.widget.NestedScrollView-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"-->
