--- a/app/src/main/res/layout/my_events.xml
+++ b/app/src/main/res/layout/my_events.xml
@@ -38,7 +38,7 @@
                 android:textSize="25sp"
                 android:textStyle="bold" />
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/myevents"                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/myevent_list"
                 android:layout_marginStart="15dp"
