--- a/app/src/main/res/layout/meal_planning.xml
+++ b/app/src/main/res/layout/meal_planning.xml
@@ -343,28 +343,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
 
-
-
-
-
-
-
-
     <Button
         android:id="@+id/submitButton"
         android:layout_width="361dp"
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/dark_blue"
         android:fontFamily="@font/inter"
         android:text="Submit"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton3"
-        />
-
-
-
+        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />
 
 
     <!--    <ScrollView-->
